# agentic-fmea

./: HTML_VALIDATION_REPORT.md  README.md  VALIDATION_REPORT.md  VISUALIZATION_FEATURES.md  comprehensive_validation_report.py  pyproject.toml  test_enhanced_visualizations.py  test_guidance_validation.py  test_html_reports.py
agentic_fmea/: __init__.py  entry.py  report.py  risk.py  taxonomy.json  taxonomy.py
agentic_fmea/templates/: base_report.html  entry_detail.html  knowledge_base.html  risk_summary.html
docs/: enhanced_memory_poisoning_report.html  enhanced_memory_poisoning_report.md  memory_poisoning_fmea_report.md  test_memory_poisoning_report.html  test_memory_poisoning_report_with_charts.html
examples/: flexible_enums_example.py  memory_poisoning_email_assistant.ipynb
tests/: __init__.py  test_data_validation.py  test_flexible_enums.py  test_integration.py  test_risk_calculation.py  test_taxonomy.py
validation_outputs/: accessibility_report.html  empty_report.html  empty_report.md  enhanced_report.html  enhanced_report.md  large_report.html  large_report.md  no_charts.html  no_charts.md
